--- a/.config/hyprland-conf/hypr/hyprland.conf
+++ b/.config/hyprland-conf/hypr/hyprland.conf
@@ -5,7 +5,7 @@
 ################
 
 # Automatically detect and configure monitors
-#monitor=,preferred,auto,auto
+monitor=,preferred,auto,auto
 #monitor=,scale 1.0
 monitor=eDP-1,1920x1080@144,0x0,1.0
 
@@ -28,7 +28,7 @@ exec-once = waybar &
 # exec-once = nm-applet &
 exec-once = hyprpaper &
 exec-once = $terminal & $terminal & $terminal & $terminal & $terminal &
-exec-once = ~/.config/scripts/autostart_layout.sh
+#exec-once = ~/.config/scripts/autostart_layout.sh
 
 
 #############################
@@ -38,7 +38,7 @@ exec-once = ~/.config/scripts/autostart_layout.sh
 # Set cursor size for both X11 and Wayland
 env = XCURSOR_SIZE,15
 env = HYPRCURSOR_SIZE,15
-env = AQ_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
+#env = AQ_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
 
 env = XDG_SESSION_TYPE,wayland
 env = XDG_CURRENT_DESKTOP,Hyprland
@@ -56,13 +56,13 @@ env = LIBVA_DRIVER_NAME,nvidia
 # (https://wiki.archlinux.org/title/Wayland#Requirements)
 # WARN: crashes me hyprland
 env = GBM_BACKEND,nvidia-drm
-
 # To force GBM as a backend
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 # set to 1 to use software cursors instead of hardware cursors
 # (https://wiki.hyprland.org/hyprland-wiki/pages/Nvidia/)
 env = WLR_NO_HARDWARE_CURSORS,1
+#env = WLR_RENDERER_ALLOW_SOFTWARE,1
 
 # TIP: Advantage is all the apps will be running on nvidia
 # WARN: crashes whatever window's opened after "hibranate"
@@ -91,11 +91,18 @@ env = NVD_BACKEND,direct
 #####################
 
 general {
-    gaps_in = 2
+    gaps_in = 5
     gaps_out = 5
-    border_size = 1
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    border_size = 2
+    col.active_border = rgb(780606) rgb(780606) 45deg
+    col.inactive_border = rgb(780606)
+    #col.active_border = rgba(139, 0, 0, 1)
+    #col.inactive_border = rgba(78, 0, 0, 1)
+    #col.active_border = #8b0000cc  # Blood red (0.8 alpha)
+    #col.inactive_border = #4e0000cc  # Darker blood red (0.8 alpha)
+    #col.active_border = #8b0000ff  # Solid blood red
+    #col.inactive_border = #4e0000ff  # Solid darker red for inactive border
+
     resize_on_border = true
     allow_tearing = false
     layout = dwindle  # Set the default layout to dwindle
@@ -200,3 +207,4 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 # windowrule = opacity 1.0,override 0.5,override 0.8,override ^(firefox)$
 # windowrulev2 = opacity 0.8 0.8, class:^(firefox)$
 windowrulev2 = float, class:^(thunar)$
+windowrulev2 = float, class:^(leafpad)$
