--- a/.config/hyprland-conf/hypr/hyprland.conf
+++ b/.config/hyprland-conf/hypr/hyprland.conf
@@ -1,5 +1,3 @@
-# Example Hyprland configuration for shuzretsu
-
 ################
 ### MONITORS ###
 ################
@@ -27,7 +25,7 @@ $menu = rofi -show drun
 exec-once = waybar &
 # exec-once = nm-applet &
 exec-once = hyprpaper &
-exec-once = $terminal & $terminal & $terminal & $terminal & $terminal &
+exec-once = $terminal & $terminal & $terminal &
 #exec-once = ~/.config/scripts/autostart_layout.sh
 
 
@@ -46,7 +44,7 @@ env = XDG_SESSION_DESKTOP,Hyprland
 
 
 #####################################
-#                LETS FUCKING nvidia specific                        #
+#    LETS FUCKING nvidia specific   #
 #####################################
 
 # Hardware acceleration on NVIDIA GPUs
@@ -93,7 +91,7 @@ env = NVD_BACKEND,direct
 general {
     gaps_in = 5
     gaps_out = 5
-    border_size = 2
+    border_size = 3
     col.active_border = rgb(780606) rgb(780606) 45deg
     col.inactive_border = rgb(780606)
     #col.active_border = rgba(139, 0, 0, 1)
@@ -102,20 +100,20 @@ general {
     #col.inactive_border = #4e0000cc  # Darker blood red (0.8 alpha)
     #col.active_border = #8b0000ff  # Solid blood red
     #col.inactive_border = #4e0000ff  # Solid darker red for inactive border
-
+    
     resize_on_border = true
     allow_tearing = false
-    layout = dwindle  # Set the default layout to dwindle
+    layout = dwindle
 }
 
 decoration {
     rounding = 5
     active_opacity = 1.0
     inactive_opacity = 1.0
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    #drop_shadow = true
+    #shadow_range = 4
+    #shadow_render_power = 3
+    #col.shadow = rgba(1a1a1aee)
     
     blur {
         enabled = true
@@ -162,6 +160,10 @@ bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, F, exec, $browser
+bind = $mainMod, L, exec, leafpad
+bind = $mainMod, I, exec, monitor_maestro tui interactive
+
+
 
 # Manage windows and focus
 bind = $mainMod, C, killactive,
@@ -207,4 +209,14 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 # windowrule = opacity 1.0,override 0.5,override 0.8,override ^(firefox)$
 # windowrulev2 = opacity 0.8 0.8, class:^(firefox)$
 windowrulev2 = float, class:^(thunar)$
-windowrulev2 = float, class:^(leafpad)$
+windowrulev2 = float, class:(leafpad)$
+
+group {
+
+    groupbar {
+        font_size = 12
+        enabled = true
+        font_family = ProFontWindows Nerd Font Regular
+    }
+
+}
