--- a/.config/hyprland-conf/hypr/hyprland.conf
+++ b/.config/hyprland-conf/hypr/hyprland.conf
@@ -1,3 +1,5 @@
+# Example Hyprland configuration for shuzretsu
+
 ################
 ### MONITORS ###
 ################
@@ -92,7 +94,7 @@ general {
     gaps_in = 5
     gaps_out = 5
     border_size = 3
-    col.active_border = rgb(780606) rgb(780606) 45deg
+    col.active_border = rgba(F5C211FF)
     col.inactive_border = rgb(780606)
     #col.active_border = rgba(139, 0, 0, 1)
     #col.inactive_border = rgba(78, 0, 0, 1)
@@ -103,13 +105,14 @@ general {
     
     resize_on_border = true
     allow_tearing = false
-    layout = dwindle
+    layout = master
+    hover_icon_on_border = false
 }
 
 decoration {
     rounding = 5
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    active_opacity = 1
+    inactive_opacity = 0.8
     #drop_shadow = true
     #shadow_range = 4
     #shadow_render_power = 3
@@ -121,18 +124,24 @@ decoration {
         passes = 1
         vibrancy = 0.1696
     }
+    fullscreen_opacity = 0.000000000000000027755575615628914
 }
 
 animations {
-    enabled = yes, please :)
+    enabled = false
     bezier = easeOutQuint,0.23,1,0.32,1
     animation = global, 1, 10, default
     animation = windows, 1, 4.79, easeOutQuint
 }
 
 misc {
-    force_default_wallpaper = -1
-    disable_hyprland_logo = false
+    force_default_wallpaper = 0
+    disable_hyprland_logo = true
+    font_family = Terminess Nerd Font
+    splash_font_family = Terminess Nerd Font
+    vfr = true
+    col.splash = rgba(FFFFFFFF)
+    disable_splash_rendering = false
 }
 
 #############
@@ -162,7 +171,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, F, exec, $browser
 bind = $mainMod, L, exec, leafpad
 bind = $mainMod, I, exec, monitor_maestro tui interactive
-
+bind = $mainMod, W, togglefloating
 
 
 # Manage windows and focus
@@ -172,6 +181,7 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+
 
 # Workspace bindings for quick switching and moving windows
 bind = $mainMod, 1, workspace, 1
@@ -211,12 +221,17 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 windowrulev2 = float, class:^(thunar)$
 windowrulev2 = float, class:(leafpad)$
 
+opengl {
+    nvidia_anti_flicker = false
+}
+
 group {
 
     groupbar {
-        font_size = 12
+        font_family = Terminess Nerd Font
         enabled = true
-        font_family = ProFontWindows Nerd Font Regular
+        font_size = 15
     }
 
+    drag_into_group = 0
 }
