--- a/.config/hyprland-conf/hypr/hyprland.conf
+++ b/.config/hyprland-conf/hypr/hyprland.conf
@@ -1,4 +1,4 @@
-# Example Hyprland configuration for shuzretsu
+
 
 ################
 ### MONITORS ###
@@ -26,7 +26,7 @@ $menu = rofi -show drun
 # Start essential services and apps on launch
 exec-once = waybar &
 # exec-once = nm-applet &
-exec-once = hyprpaper &
+exec-once = hyprpaper
 exec-once = $terminal & $terminal & $terminal &
 #exec-once = ~/.config/scripts/autostart_layout.sh
 
@@ -46,7 +46,7 @@ env = XDG_SESSION_DESKTOP,Hyprland
 
 
 #####################################
-#    LETS FUCKING nvidia specific   #
+###            NVIDIA             ###
 #####################################
 
 # Hardware acceleration on NVIDIA GPUs
@@ -128,15 +128,16 @@ decoration {
 }
 
 animations {
-    enabled = false
+    enabled = true
     bezier = easeOutQuint,0.23,1,0.32,1
     animation = global, 1, 10, default
     animation = windows, 1, 4.79, easeOutQuint
+    first_launch_animation = true
 }
 
 misc {
     force_default_wallpaper = 0
-    disable_hyprland_logo = true
+    disable_hyprland_logo = false
     font_family = Terminess Nerd Font
     splash_font_family = Terminess Nerd Font
     vfr = true
